Adjusted header st yle

--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+h1 {
+	color: gold;
+	text-align: center;
+}
+</style>
+</head>
 <body>
 
 <h1>Dark Age of Camelot Character Planner</h1>
