Moved CSS to external file and imported.

--- a/index.html
+++ b/index.html
@@ -2,69 +2,7 @@
 <html>
 <head>
 <style>
-body {
-	background-color: silver;
-}
-h1 {
-	color: #745C42;
-	text-align: center;
-	background-color: #000000;
-}
-td {
-	background-color: #0A0A0A; 
-	border-style: solid; 
-	border-color: #745C42; 
-	color: white;
-	border-width: 3px;
-	font-size: 12px;
-	font-family: Arial;
-}
-hr {
-	border-color: #745C42;
-	size: 3px;
-}
-.table-align {
-	height: 448px;
-	width: 250px;
-}
-.objectborder {
-	background-color: #000000;
-	border-style: solid;
-	border-color: #745C42;
-	color: white;
-	border-radius: 5px;
-	border-width: 1px;
-	font-size: 12px;
-	padding: 2px;
-}
-.inputborder {
-	background-color: #000000;
-	border-style: solid;
-	border-color: #745C42;
-	color: white;
-	border-radius: 5px;
-	border-width: 1px;
-	font-size: 12px;
-}
-.selectinputborder {
-	background-color: #000000;
-	border-style: solid;
-	border-color: #000000;
-	color: white;
-	border-radius: 5px;
-	border-width: 1px;
-	font-size: 12px;
-}
-#selectalb {
-	color: red;
-}
-#selecthib {
-	color: green;
-}
-#selectmid {
-	color: blue;
-}
-
+	<link rel="stylesheet" href="css/planner.css">
 </style>
 <title>Dark Age of Camelot Character Planner</title>
 </head>
