Corrected import for CSS

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-	<link rel="stylesheet" href="css/planner.css">
-</style>
+
+<link rel="stylesheet" href="CSS/planner.css">
+
 <title>Dark Age of Camelot Character Planner</title>
 </head>
 <body>
