--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <table>
 	<caption>
 		Realm: 
-		<label id="selectalb"><input type="radio" name="realm" value="albion" checked>Albion </label> 
-		<label id="selecthib"><input type="radio" name="realm" value="hibernia">Hibernia </label>
-		<label id="selectmid"><input type="radio" name="realm" value="midguard">Midguard </label>
+		<label id="selectalb"><input type="radio" name="realm" id="albRealm" checked>Albion </label> 
+		<label id="selecthib"><input type="radio" name="realm" id="hibRealm">Hibernia </label>
+		<label id="selectmid"><input type="radio" name="realm" id="midRealm">Midguard </label>
 	</caption>
 		<tr>
 			<th>Attributes</th>
@@ -29,34 +29,34 @@
 		<tr>
 			<td class="table-align"><!-- Attributes page-->
 				<!-- Insert character name here--><br />
-				Level <input type="number"  class="inputborder" value="level" id="charLevel" min="1" max="50" style="width: 28px; margin-right: 15px; margin-left: 2px;"> 
-				Realm Points <input type="number"  class="inputborder" value="realmpoints" min="0" max="999999999" style="width: 80px; margin-top: 2px; margin-bottom:2px;"><br />
-				WeapSkill <input type="number"  class="inputborder inputspaceone" value="weaponskill"  min="1" max="9999" style="margin-right: 41px; margin-left: 6px;" readonly> 
-				Hit Points <input type="number"  class="inputborder inputspaceone" value="hitpoints" min="1" max="99999" readonly><br />
-				WeapDam <input type="number"  class="inputborder inputspaceone" value="weapondamage" min="1" max="9999" style="margin-right: 38px;" readonly> 
-				ArmorFact <input type="number"  class="inputborder inputspaceone" value="armorfactor" min="1" max="9999" readonly><br />
+				Level <input type="number" name="charLevel"  id="charLevel" value="1" min="1" max="50" step="1" class="inputborder" style="width: 28px; margin-right: 15px; margin-left: 2px;"> 
+				Realm Points <input type="number" name="realmPoints" id="realmPoints" value="0" min="0" max="999999999" step="1" class="inputborder" style="width: 80px; margin-top: 2px; margin-bottom:2px;"><br />
+				WeapSkill <input type="number" name="weaponSkill" id="weaponSkill" min="1" max="9999" class="inputborder inputspaceone" style="margin-right: 41px; margin-left: 6px;" readonly> 
+				Hit Points <input type="number" name="hitPoints" id="hitPoints" min="1" max="99999" class="inputborder inputspaceone" readonly><br />
+				WeapDam <input type="number" name="weaponDamage" id="weaponDamage" min="1" max="9999" class="inputborder inputspaceone" style="margin-right: 38px;" readonly> 
+				ArmorFact <input type="number" name="armorFactor" id="armorFactor" min="1" max="9999" class="inputborder inputspaceone" readonly><br />
 				<div style="background: black;">
 					<hr />
-					<input type="number" class="inputborder inputspacetwo" name="attribute" value="strength" min="1" max="9999" readonly>Strength 
-					<input type="number" class="inputborder inputspacetwo" style="margin-left: 39px;" name="attribute" value="intelligence" min="1" max="9999" readonly>Intelligence<br />
-					<input type="number" class="inputborder inputspacetwo" name="attribute" value="constitution" min="1" max="9999" readonly>Constitution 
-					<input type="number" class="inputborder inputspacetwo" style="margin-left: 21px;" name="attribute" value="empathy" min="1" max="9999" readonly>Empathy<br />
-					<input type="number" class="inputborder inputspacetwo" name="attribute" value="dexterity" min="1" max="9999" readonly>Dexterity 
-					<input type="number" class="inputborder inputspacetwo" style="margin-left: 37px;" name="attribute" value="piety" min="1" max="9999" readonly>Piety<br />
-					<input type="number" class="inputborder inputspacetwo" name="attribute" value="quickness" min="1" max="9999" readonly>Quickness 
-					<input type="number" class="inputborder inputspacetwo" style="margin-left: 29px;" name="attribute" value="charisma" min="1" max="9999" readonly>Charisma<br />
+					<input type="number" name="strAttribute" id="strAttribute" value="0" min="1" max="9999" class="inputborder inputspacetwo" readonly>Strength 
+					<input type="number" name="intAttribute" id="intAttribute" value="0" min="1" max="9999" class="inputborder inputspacetwo" style="margin-left: 39px;" readonly>Intelligence<br />
+					<input type="number" name="conAttribute" id="conAttribute" value="0" min="1" max="9999" class="inputborder inputspacetwo" readonly>Constitution 
+					<input type="number" name="empAttribute" id="empAttribute" value="0" min="1" max="9999" class="inputborder inputspacetwo" style="margin-left: 21px;" readonly>Empathy<br />
+					<input type="number" name="dexAttribute" id="dexAttribute" value="0" min="1" max="9999" class="inputborder inputspacetwo" readonly>Dexterity 
+					<input type="number" name="pieAttribute" id="pieAttribute" value="0" min="1" max="9999" class="inputborder inputspacetwo" style="margin-left: 37px;" readonly>Piety<br />
+					<input type="number" name="quiAttribute" id="quiAttribute" value="0" min="1" max="9999" class="inputborder inputspacetwo" readonly>Quickness 
+					<input type="number" name="chaAttribute" id="chaAttribute" value="0" min="1" max="9999" class="inputborder inputspacetwo" style="margin-left: 29px;" readonly>Charisma<br />
 					<hr />
 				</div>
 				<label class="objectborder" style="padding-right:20%; margin-left: 2px;">Resists </label>
-				<input type="number" class="inputborder inputspacethree" style="margin-left: 22px;" name="resists" id="coldtot" min="0" max="1000" placeholder="+0%" readonly>Cold<br />
-				<input type="number" class="inputborder inputspacethree" name="resists" id="thrusttot" min="0" max="1000" placeholder="+0%" readonly>Thrust 
-				<input type="number" class="inputborder inputspacethree" style="margin-left: 35px;" name="resists" id="mattertot" min="0" max="1000" placeholder="+0%" readonly>Matter<br />
-				<input type="number" class="inputborder inputspacethree" name="resists" id="crushtot" min="0" max="1000" placeholder="+0%" readonly>Crush 
-				<input type="number" class="inputborder inputspacethree" style="margin-left: 37px;" name="resists" id="energytot" min="0" max="1000" placeholder="+0%" readonly>Energy<br />
-				<input type="number" class="inputborder inputspacethree" name="resists" id="slashtot" min="0" max="1000" placeholder="+0%" readonly>Slash 
-				<input type="number" class="inputborder inputspacethree" style="margin-left: 39px;" name="resists" id="spirittot" min="0" max="1000" placeholder="+0%" readonly>Spirit<br />
-				<input type="number" class="inputborder inputspacethree" name="resists" id="heattot" min="0" max="1000" placeholder="+0%" readonly>Heat 
-				<input type="number" class="inputborder inputspacethree" style="margin-left: 43px;" name="resists" id="bodytot" min="0" max="1000" placeholder="+0%" readonly>Body<br />
+				<input type="number" name="coldRes" id="coldRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" style="margin-left: 22px;" readonly>Cold<br />
+				<input type="number" name="thrustRes" id="thrustRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" readonly>Thrust 
+				<input type="number" name="matterRes" id="matterRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" style="margin-left: 35px;" readonly>Matter<br />
+				<input type="number" name="crushRes" id="crushRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" readonly>Crush 
+				<input type="number" name="energyRes" id="energyRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" style="margin-left: 37px;" readonly>Energy<br />
+				<input type="number" name="slashRes" id="slashRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" readonly>Slash 
+				<input type="number" name="spiritRes" id="spiritRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" style="margin-left: 39px;" readonly>Spirit<br />
+				<input type="number" name="bodyRes" id="heatRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" readonly>Heat 
+				<input type="number" name="bodyRes" id="bodyRes" min="0" max="1000" placeholder="+0%" class="inputborder inputspacethree" style="margin-left: 43px;" readonly>Body<br />
 				<div class="attbox">
 				Prof: <!-- Overall class type --><br />
 				Order: <!-- Crafting order --><br />
@@ -153,7 +153,7 @@
 			</td>
 			<td class="table-align"><!-- Specializations page -->
 				<label class="objectborder pagetitle" style="padding-right: 40px;">Specializations </label>  
-				<label class="objectborder">Points:<input type="number" class="selectinputborder" placeholder="0" style="text-align: right;" value="specpoints" min="0" max="9999" readonly></label><br />
+				<label class="objectborder">Points:<input type="number" name="specPoints" id="specPoints" value="0" min="0" max="9999" placeholder="0" class="selectinputborder" style="text-align: right;" readonly></label><br />
 				<div class="specbox">
 					<!-- Selected Class trainable specializations, can scroll --><br />
 				</div>
@@ -178,7 +178,7 @@
 				<div class="abbox" style="margin-bottom: 3px">
 				<!-- Selected Class spells, both naturally learned and trained -->
 				</div>
-				<label class="buttonborder"><button type="button" class="button">Train</button>
+				<label class="buttonborder"><button type="button" name="train" id="train" class="button">Train</button>
 			</td>
 			<td class="table-align"><!-- "Group page" Options for class and race here -->
 			</td>
