Added clarifying notes to index for classes drop down. Added array of races and classes, as well as array for race/class eligibility. Changed approach for showing/hiding available classes using new arrays.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 		</select>
 		Class: 
 		<select name="classes" id="classes">
+			<!--Albion classes-->
 			<option id="armsman" value="armsman" style="display: block;">Armsman</option>
 			<option id="cabalist" value="cabalist" style="display: block;">Cabalist</option>
 			<option id="cleric" value="cleric" style="display: block;">Cleric</option>
@@ -66,6 +67,7 @@
 			<option id="sorcerer" value="sorcerer" style="display: block;">Sorcerer</option>
 			<option id="theurgist" value="theurgist" style="display: block;">Theurgist</option>
 			<option id="wizard" value="wizard" style="display: block;">Wizard</option>
+			<!--Hibernia classes-->
 			<option id="animist" value="animist" style="display: none;">Animist</option>
 			<option id="bainshee" value="bainshee" style="display: none;">Bainshee</option>
 			<option id="bard" value="bard" style="display: none;">Bard</option>
@@ -82,6 +84,7 @@
 			<option id="valewalker" value="valewalker" style="display: none;">Valewalker</option>
 			<option id="vampiir" value="vampiir" style="display: none;">Vampiir</option>
 			<option id="warden" value="warden" style="display: none;">Warden</option>
+			<!--Midgaurd classes-->
 			<option id="berserker" value="berserker" style="display: none;">Berserker</option>
 			<option id="bonedancer" value="bonedancer" style="display: none;">Bonedancer</option>
 			<option id="healer" value="healer" style="display: none;">Healer</option>
